Fix the footer to the bottom unless on mobile.

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -297,7 +297,10 @@ header {
 }
 
 footer {
-	position: relative;
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	left: 0;
 	margin-top: 40px;
 	text-align: right;
 	background-color: rgb(92,118,151);
@@ -306,6 +309,7 @@ footer {
 	padding-right: 10px;
 
 	@media (max-width: 480px) {
+		position: relative;
 		padding: 1px 0px 1px 0px;
 	}
 
